--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
